# fcitx-fbterm

./: CMakeLists.txt
scripts/: CMakeLists.txt
src/: CMakeLists.txt  fcitx-fbterm.cpp  keymap.cpp  keymap.h
